--- a/contact-us.html
+++ b/contact-us.html
@@ -5,10 +5,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bengal Tigers - About Us</title>
     <meta name="description" content="Sports Club">
     <meta name="keywords" content="Soccer, Football, Sports, Game, Virginia soccer,Fairfax soccer,Sports club, soccer club, soccer club in VA, sports club in Alexandria, sports club in Arlington, Men soccer club in va ">
     <meta name="author" content="Molla, Mohammed Omar Faruq Jewel">
+    <title>Bengal Tigers - About Us</title>
+    <!-- <style>
+        body {
+            background: #2c2b35 !important;
+
+        }
+    </style> -->
     <!-- Css Files -->
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -227,40 +233,50 @@
 
 
                                         <!--// Main Wrapper \\-->
-    <div class="sportsmagazine-main-wrapper">
+<div class="sportsmagazine-main-wrapper">
 		<!--// SubHeader \\-->
-        <div class="sportsmagazine-subheader" data-aos="zoom-in">
-            <span class="subheader-transparent"></span>
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h1>About Us</h1>
+        
+        <!--// SubHeader \\-->
+<!--// Main Content \\-->
+<div class="sportsmagazine-main-content">
+<!--// Main Section \\-->
+<div class="sportsmagazine-main-section sportsmagazine-contactus-full">
+    <div style="text-align: center;">
+        <div class="aboutus_container">
+            <div class="tg-pattern">
+            <div class="row">
+                <!-- <div class="col-md-5">
+                    <div class="about_img">
+                        <img src="forindex/img/BT-banner.webp" alt="">
                     </div>
-                    <div class="col-md-12">
-                        <ul class="sportsmagazine-breadcrumb">
-                            <li><a href="index.html">Home</a></li>
-                            <li>About Us</li>
-                        </ul>
+                </div> -->
+                <div class="col-12">
+                    <div class="about_contents">
+                        <div class="tg-section-heading">
+                            <h2>We Are The <span>Bengal Tigers</span></h2>
+                        </div>
+                        <div class="tg-description">
+                            <p>We are a Soccer club that allows individuals to make their personal fitness better and improve mental health along with making friends.</p>
+                            <div class="tg-btnbox">
+                                <a class="tg-btn" href="#signUp"><span>Become a member</span></a>
+                            </div>
+                        <img class="vector_img" src="forindex/img/undraw_junior_soccer_6sop.svg" alt="vector">
+
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <!--// SubHeader \\-->
-
-		                        <!--// Main Content \\-->
-<div class="sportsmagazine-main-content">
-
-<!--// Main Section \\-->
-<div class="sportsmagazine-main-section sportsmagazine-contactus-full">
+            </div>
+      </div>
+    </div>
     <div class="container">
-        <div class="row">
-                        
-            <div class="signup_container" id="signUp">
-                <div class="custom-shape-divider-top-1632220923">
+        <div class="row">     
+            <div style="margin-top: -20px !important;border-radius: 0 0 6px 6px;" class="signup_container" id="signUp">
+                <!-- <div class="custom-shape-divider-top-1632220923">
                     <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                         <path d="M649.97 0L550.03 0 599.91 54.12 649.97 0z" class="shape-fill"></path>
                     </svg>
-                </div>
+                </div> -->
             <!-- <div id="signupbox">
             <h2>Sign Up to join our Team</h2>
             </div> -->
@@ -322,11 +338,11 @@
                     </div>
                 </div>
             </div>
-            <div class="custom-shape-divider-bottom-1632221712">
+            <!-- <div class="custom-shape-divider-bottom-1632221712">
                 <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
                     <path d="M1200 120L0 16.48 0 0 1200 0 1200 120z" class="shape-fill"></path>
                 </svg>
-            </div>
+            </div> -->
             </div>
 <div class="contact_container">
     <div class="row">
