edited home page

--- a/index.html
+++ b/index.html
@@ -1045,7 +1045,7 @@
 			<section class="tg-main-section tg-haslayout">
 				<div class="container">
 					<div class="tg-section-name">
-						<h2>latest result</h2>
+						<h2>latest result BT-Internal-2021</h2>
 					</div>
 					<div class="col-sm-11 col-xs-11 pull-right">
 						<div class="row">
@@ -1056,7 +1056,7 @@
 											<div role="tabpanel" class="tab-pane active" id="one">
 												<div class="tg-matchresult">
 													<div class="tg-box">
-														<div class="tg-score"><h3>2 - 1</h3></div>
+														<div class="tg-score"><h3>1 - 0</h3></div>
 														<div class="tg-teamscore">
 															<strong class="tg-team-logo">
 																<a href="#">
@@ -1064,7 +1064,7 @@
 																</a>
 															</strong>
 															<div class="tg-team-nameplusstatus">
-																<h4><a href="#">Lakeridge Pride ( Win )</a></h4>
+																<h4><a href="#">Bengal Tigers Red ( Win )</a></h4>
 															</div>
 															<!-- <ul class="tg-playernameplusgoadtime">
 																<li>Roman Fenley (15)</li>
@@ -1080,7 +1080,7 @@
 																</a>
 															</strong>
 															<div class="tg-team-nameplusstatus">
-																<h4><a href="#">Bengal Tiger Red ( lose )</a></h4>
+																<h4><a href="#">Bengal Tiger Green ( lose )</a></h4>
 															</div>
 															<!-- <ul class="tg-playernameplusgoadtime">
 																<li>Ethan Ryberg (22)</li>
@@ -1282,16 +1282,16 @@
 																<strong class="tg-teamlogo">
 																	<i class="fa fa-futbol-o" style="color: orange;"></i>
 																</strong>
-																<h4>L. Prime</h4>
+																<h4>BT-RED</h4>
 															</div>
 															<div class="tg-box">
-																<h3>2 - 1</h3>
+																<h3>1 - 0</h3>
 															</div>
 															<div class="tg-box">
 																<strong class="tg-teamlogo">
 																	<i class="fa fa-futbol-o" style="color: orange;"></i>
 																</strong>
-																<h4>BT Red</h4>
+																<h4>BT GREEN</h4>
 															</div>
 														</div>
 													</a>
@@ -1303,16 +1303,16 @@
 																<strong class="tg-teamlogo">
 																	<i class="fa fa-futbol-o" style="color: orange;"></i>
 																</strong>
-																<h4>BT Red</h4>
+																<h4>BT ORANGE</h4>
 															</div>
 															<div class="tg-box">
-																<h3>1 - 0</h3>
+																<h3>1 - 1</h3>
 															</div>
 															<div class="tg-box">
 																<strong class="tg-teamlogo">
 																	<i class="fa fa-futbol-o" style="color: orange;"></i>
 																</strong>
-																<h4>Dulles United</h4>
+																<h4>BT BLUE</h4>
 															</div>
 														</div>
 													</a>
@@ -1324,16 +1324,16 @@
 																<strong class="tg-teamlogo">
 																	<i class="fa fa-futbol-o" style="color: orange;"></i>
 																</strong>
-																<h4>L. Prime</h4>
+																<h4>BT-BLUE</h4>
 															</div>
 															<div class="tg-box">
-																<h3>2 - 0</h3>
+																<h3>1 - 0</h3>
 															</div>
 															<div class="tg-box">
 																<strong class="tg-teamlogo">
 																	<i class="fa fa-futbol-o" style="color: orange;"></i>
 																</strong>
-																<h4>L. Pride</h4>
+																<h4>BT-GREEN</h4>
 															</div>
 														</div>
 													</a>
@@ -1348,13 +1348,13 @@
 																<h4>BT Red</h4>
 															</div>
 															<div class="tg-box">
-																<h3>3 - 0</h3>
+																<h3>0 - 0</h3>
 															</div>
 															<div class="tg-box">
 																<strong class="tg-teamlogo">
 																	<i class="fa fa-futbol-o" style="color: orange;"></i>
 																</strong>
-																<h4>BT Green</h4>
+																<h4>BT-ORANGE</h4>
 															</div>
 														</div>
 													</a>
@@ -1366,16 +1366,16 @@
 																<strong class="tg-teamlogo">
 																		<i class="fa fa-futbol-o" style="color: orange;"></i>
 																</strong>
-																<h4>L. Prime</h4>
+																<h4>BT-ORANGE</h4>
 															</div>
 															<div class="tg-box">
-																<h3>4 - 1</h3>
+																<h3>NOT YET</h3>
 															</div>
 															<div class="tg-box">
 																<strong class="tg-teamlogo">
 																	<i class="fa fa-futbol-o" style="color: orange;"></i>
 																</strong>
-																<h4>Loudon Laidback</h4>
+																<h4>BT-GREEN</h4>
 															</div>
 														</div>
 													</a>
@@ -1387,16 +1387,16 @@
 																<strong class="tg-teamlogo">
 																		<i class="fa fa-futbol-o" style="color: orange;"></i>
 																</strong>
-																<h4>L. Pride</h4>
+																<h4>BT-RED</h4>
 															</div>
 															<div class="tg-box">
-																<h3>0 - 0</h3>
+																<h3>NOT YET</h3>
 															</div>
 															<div class="tg-box">
 																<strong class="tg-teamlogo">
 																	<i class="fa fa-futbol-o" style="color: orange;"></i>
 																</strong>
-																<h4>BT Red</h4>
+																<h4>BT-BLUE</h4>
 															</div>
 														</div>
 													</a>
@@ -1408,16 +1408,16 @@
 																<strong class="tg-teamlogo">
 																		<i class="fa fa-futbol-o" style="color: orange;"></i>
 																</strong>
-																<h4>Dulles United</h4>
+																<h4>YET TO COME</h4>
 															</div>
 															<div class="tg-box">
-																<h3>0 - 2</h3>
+																<h3>FINAL</h3>
 															</div>
 															<div class="tg-box">
 																<strong class="tg-teamlogo">
 																	<i class="fa fa-futbol-o" style="color: orange;"></i>
 																</strong>
-																<h4>L. Prime</h4>
+																<h4>YET TO COME</h4>
 															</div>
 														</div>
 													</a>
@@ -1588,7 +1588,7 @@
 				  <h2>Come for a trial to see if you like us</h2>
 				</div>
 				  <div class="accordion-panel">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					<p>Please come to see our practice and see if you like the team and the standard.</p>
 				  </div>
 			  </li>
 		
@@ -1597,23 +1597,26 @@
 				  <h2>Pay $100 for each year</h2>
 				</div>
 				  <div class="accordion-panel">
-					<p>Lorem ipsum dolor amet mustache knausgaard +1, blue bottle waistcoat tbh semiotics artisan synth stumptown gastropub cornhole celiac swag. Brunch raclette vexillologist post-ironic glossier ennui XOXO mlkshk godard pour-over blog tumblr humblebrag.</p>
+					<p>Each member must be registered with Bengal Tigers to become a member and enjoy the benefits of
+						 the organization. Registration fee is $100 per individual.</p>
 				  </div>
 			  </li>
 			  <li>
 				<div class="accordion-button">
-				  <h2>Pay $100 for each year</h2>
+				  <h2>Bengal Tiger's Practice Policy</h2>
 				</div>
 				  <div class="accordion-panel">
-					<p>Lorem ipsum dolor amet mustache knausgaard +1, blue bottle waistcoat tbh semiotics artisan synth stumptown gastropub cornhole celiac swag. Brunch raclette vexillologist post-ironic glossier ennui XOXO mlkshk godard pour-over blog tumblr humblebrag.</p>
+					<p>We practice friendly soccer games two times a week. You must be a registered member to participate in the practice regularly. 
+						To enjoy a fun, healthy, and timely exercise during each practice, we expect each member to follow some policies.</p>
 				  </div>
 			  </li>
 			  <li>
 				<div class="accordion-button">
-				  <h2>Pay $100 for each year</h2>
+				  <h2>Membership and Registration Policy</h2>
 				</div>
 				  <div class="accordion-panel">
-					<p>Lorem ipsum dolor amet mustache knausgaard +1, blue bottle waistcoat tbh semiotics artisan synth stumptown gastropub cornhole celiac swag. Brunch raclette vexillologist post-ironic glossier ennui XOXO mlkshk godard pour-over blog tumblr humblebrag.</p>
+					<p>Bengal Tigers is a Soccer Sports Organization managed and run by volunteers and the members. Members are the foundation 
+						of Bengal Tigers and therefore it is important to know the rights and obligations of the membership. </p>
 				  </div>
 			  </li>
 			  <li>
@@ -1621,7 +1624,8 @@
 				  <h2>Request to register in our whatsapp page</h2>
 				</div>
 				  <div class="accordion-panel">
-					<p>Zombie ipsum reversus ab viral inferno, nam rick grimes malum cerebro. De carne lumbering animata corpora quaeritis. Summus brains sit​​, morbo vel maleficia? De apocalypsi gorger omero undead survivor dictum mauris. Hi mindless mortuis soulless creaturas.</p>
+					<p> For regular practice day and soccer related comunications , we follow Whatsapp group chat. Only qulify member can be in the group determine 
+						by the admin </p>
 				  </div>
 			  </li>
 			</ul>
@@ -1890,7 +1894,7 @@
 					<span class="tg-copyright"><a target="_blank" href="index.html"> Bengal Tigers 2021. All Rights Reserved.</a></span>
 					<nav class="tg-footernav">
 						<ul>
-							<li><a href="404.html">&copy; Molla Mohammed Omar Faruq Jewel</a></li>
+							<li><a href="404.html">&copy; BengalTigers.org</a></li>
 						</ul>
 					</nav>
 				</div>
