--- a/gallery.html
+++ b/gallery.html
@@ -113,8 +113,12 @@
                             <li>
                                 <a href="index.html">Home</a>
                             </li>
-                            <li>
-                                <a href="roster.html">Tournaments</a>
+                            <li class="menu-item-has-children">
+                                <a href="#">Tournaments</a>
+                                <ul class="tg-dropdown-menu">
+                                    <li><a href="tournament_2021.html">BT-Tournament 2021</a></li>
+                                    <li><a href="internal_2021.html">BT-INTERNAL Tournament 2021</a></li>
+                                </ul>
                             </li>
                             <li><a href="members.html">Members</a></li>
                             
@@ -223,7 +227,13 @@
                                                         <li><a href="playerdetail.html">playergrid detail</a></li>
                                                     </ul> -->
                                                 </li>
-                                                <li><a href="roster.html">Tournaments</a></li>
+                                                <li>
+                                                    <a href="#">Tournaments &nbsp;<i class="fa fa-angle-down" aria-hidden="true"></i></a>
+                                                    <ul class="tg-dropdown-menu">
+                                                        <li><a href="tournament_2021.html">BT-Tournament 2021</a></li>
+                                                        <li><a href="internal_2021.html">BT-INTERNAL Tournament 2021</a></li>
+                                                    </ul>
+                                                </li>
                                                 <!-- <li>
                                                     <a href="#">Match Results</a>
                                                     <ul class="tg-dropdown-menu">
@@ -607,7 +617,7 @@
             </aside>
                 <aside class="col-md-6 sportsmagazine-copyright-right">
                     <ul class="sportsmagazine-copyright-link">
-                        <li><a href="404.html" class="sportsmagazine-colorhover">Copyrights © Molla Mohammed Omar Faruq Jewel</a></li>
+                        <li><a href="404.html" class="sportsmagazine-colorhover">© BengalTigers.org</a></li>
                     </ul>
                 </aside>
             </div>
