--- a/index.html
+++ b/index.html
@@ -647,8 +647,12 @@
 					<li class="active">
 						<a href="index.html">Home</a>
 					</li>
-					<li>
-						<a href="roster.html">Tournaments</a>
+					<li class="menu-item-has-children">
+						<a href="#">Tournaments</a>
+						<ul class="tg-dropdown-menu">
+							<li><a href="tournament_2021.html">BT-Tournament 2021</a></li>
+							<li><a href="internal_2021.html">BT-INTERNAL Tournament 2021</a></li>
+						</ul>
 					</li>
 					<li><a href="members.html">Members</a></li>
 					
@@ -754,8 +758,12 @@
                                             <a href="members.html">Members</a>
                                         </li>
                                         <li>
-											<a href="roster.html">Tournaments</a>
-										</li>
+                                            <a href="#">Tournaments &nbsp;<i class="fa fa-angle-down" aria-hidden="true"></i></a>
+                                            <ul class="tg-dropdown-menu">
+                                                <li><a href="tournament_2021.html">BT-Tournament 2021</a></li>
+                                                <li><a href="internal_2021.html">BT-INTERNAL Tournament 2021</a></li>
+                                            </ul>
+                                        </li>
                                         
                                     </ul>
                                 </div>
@@ -984,7 +992,7 @@
 										</div>
 
 										<div class="tg-btnbox">
-											<a class="tg-btn" href="roster.html"><span>read more</span></a>
+											<a class="tg-btn" href="tournament_2021.html"><span>read more</span></a>
 											<a class="tg-btn" href="members.html"><span>Become a member</span></a>
 										</div>
 									</div>
@@ -1426,7 +1434,7 @@
 											</ul>
 										</div>
 										<div class="tg-btnbox">
-											<a class="tg-btn" href="roster.html"><span>view all</span></a>
+											<a class="tg-btn" href="tournament_2021.html"><span>view all</span></a>
 										</div>
 									</div>
 								</div>
