Revert "added a new page and other fixes"

--- a/404.html
+++ b/404.html
@@ -99,7 +99,7 @@
             </aside>
                 <aside class="col-md-6 sportsmagazine-copyright-right">
                     <ul class="sportsmagazine-copyright-link">
-                        <li><a href="404.html" class="sportsmagazine-colorhover">© BengalTigers.org</a></li>
+                        <li><a href="404.html" class="sportsmagazine-colorhover">Copyrights © Molla Mohammed Omar Faruq Jewel</a></li>
                     </ul>
                 </aside>
             </div>
