--- a/index.html
+++ b/index.html
@@ -647,12 +647,8 @@
 					<li class="active">
 						<a href="index.html">Home</a>
 					</li>
-					<li class="menu-item-has-children">
-						<a href="#">Tournaments</a>
-						<ul class="tg-dropdown-menu">
-							<li><a href="tournament_2021.html">BT-Tournament 2021</a></li>
-							<li><a href="internal_2021.html">BT-INTERNAL Tournament 2021</a></li>
-						</ul>
+					<li>
+						<a href="roster.html">Tournaments</a>
 					</li>
 					<li><a href="members.html">Members</a></li>
 					
@@ -758,12 +754,8 @@
                                             <a href="members.html">Members</a>
                                         </li>
                                         <li>
-                                            <a href="#">Tournaments &nbsp;<i class="fa fa-angle-down" aria-hidden="true"></i></a>
-                                            <ul class="tg-dropdown-menu">
-                                                <li><a href="tournament_2021.html">BT-Tournament 2021</a></li>
-                                                <li><a href="internal_2021.html">BT-INTERNAL Tournament 2021</a></li>
-                                            </ul>
-                                        </li>
+											<a href="roster.html">Tournaments</a>
+										</li>
                                         
                                     </ul>
                                 </div>
@@ -992,7 +984,7 @@
 										</div>
 
 										<div class="tg-btnbox">
-											<a class="tg-btn" href="tournament_2021.html"><span>read more</span></a>
+											<a class="tg-btn" href="roster.html"><span>read more</span></a>
 											<a class="tg-btn" href="members.html"><span>Become a member</span></a>
 										</div>
 									</div>
@@ -1434,7 +1426,7 @@
 											</ul>
 										</div>
 										<div class="tg-btnbox">
-											<a class="tg-btn" href="tournament_2021.html"><span>view all</span></a>
+											<a class="tg-btn" href="roster.html"><span>view all</span></a>
 										</div>
 									</div>
 								</div>
