fixed modal on members

--- a/members.html
+++ b/members.html
@@ -50,8 +50,8 @@
 			Wrapper Start
 	*************************************-->
 	
-    <div class="sportsmagazine-main-wrapper">
-        <div id="tg-wrapper" class="tg-wrapper tg-haslayout">
+<div class="sportsmagazine-main-wrapper">
+    <div id="tg-wrapper" class="tg-wrapper tg-haslayout">
 
 <!--************************************
         Mobile Menu Start
@@ -239,6 +239,7 @@
 	*************************************-->
 
 	<!--// SubHeader \\-->
+    <script src="modal-tg.js"></script>
         
         <!--// SubHeader \\-->
 
