--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
 								<h1>Bengal<span>Tigers</span></h1>
 								<div class="tg-btnbox">
 									<h2>More Than a club</h2>
-									<a class="tg-btn" href="contact-us.html"><span>read more</span></a>
+									<a class="tg-btn" href="Policy.html"><span>read more</span></a>
 								</div>
 							</div>
 						</div>
@@ -992,8 +992,8 @@
 										</div>
 
 										<div class="tg-btnbox">
-											<a class="tg-btn" href="tournament_2021.html"><span>read more</span></a>
-											<a class="tg-btn" href="members.html"><span>Become a member</span></a>
+											<a class="tg-btn" href="Policy.html"><span>read more</span></a>
+											<a class="tg-btn" href="contact-us.html"><span>Become a member</span></a>
 										</div>
 									</div>
 								</div>
@@ -1434,7 +1434,7 @@
 											</ul>
 										</div>
 										<div class="tg-btnbox">
-											<a class="tg-btn" href="tournament_2021.html"><span>view all</span></a>
+											<a class="tg-btn" href="internal_2021.html"><span>view all</span></a>
 										</div>
 									</div>
 								</div>
