updated fayez name

--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@
 					<div class="row">
 						<div class="col-md-5">
 							<div class="about_img">
-								<img src="forindex/img/BT-banner.webp" alt="">
+								<img src="/img/internal2021/fourTeamHandsUp.jpeg" alt="">
 							</div>
 						</div>
 						<div class="col-md-7">
@@ -1377,7 +1377,7 @@
 																<h4>BT-ORANGE</h4>
 															</div>
 															<div class="tg-box">
-																<h3>NOT YET</h3>
+																<h3>0 - 0</h3>
 															</div>
 															<div class="tg-box">
 																<strong class="tg-teamlogo">
@@ -1398,7 +1398,7 @@
 																<h4>BT-RED</h4>
 															</div>
 															<div class="tg-box">
-																<h3>NOT YET</h3>
+																<h3>0 - 0</h3>
 															</div>
 															<div class="tg-box">
 																<strong class="tg-teamlogo">
@@ -1416,7 +1416,7 @@
 																<strong class="tg-teamlogo">
 																		<i class="fa fa-futbol-o" style="color: orange;"></i>
 																</strong>
-																<h4>YET TO COME</h4>
+																<h4>BT-BLUE</h4>
 															</div>
 															<div class="tg-box">
 																<h3>FINAL</h3>
@@ -1425,7 +1425,7 @@
 																<strong class="tg-teamlogo">
 																	<i class="fa fa-futbol-o" style="color: orange;"></i>
 																</strong>
-																<h4>YET TO COME</h4>
+																<h4>BT-RED</h4>
 															</div>
 														</div>
 													</a>
