--- a/internal_2021.html
+++ b/internal_2021.html
@@ -270,7 +270,7 @@
 <!--// Latest Match Result \\-->
 <!--// Advertisement \\-->
 <figure class="sportsmagazine-add-banner">
-<img src="img/blueAndOrange.jpeg" alt="ad">
+<img src="img/internal2021/fourTeamHandsUp.jpeg" alt="ad">
 <!-- <span class="sportsmagazine-add-transparent"></span> -->
 <figcaption>
     <div class="sportsmagazine-addbanner-caption">
@@ -547,22 +547,22 @@
         </div>
      <!--Super Supporter-->
      <div class="skillst">
-        <h6>Soper Supperter-1</h6>
+        <h6>Super Supporter-1</h6>
         <span>TBD</span>
         <div class="progressbar1" data-width="75" data-target="75"></div>
     </div>
     <div class="skillst">
-        <h6>Soper Supperter-2</h6>
+        <h6>Super Supporter-2</h6>
         <span>TBD</span>
         <div class="progressbar1" data-width="75" data-target="75"></div>
     </div>
     <div class="skillst">
-        <h6>Soper Supperter-3</h6>
+        <h6>Super Supporter-3</h6>
         <span>TBD</span>
         <div class="progressbar1" data-width="75" data-target="75"></div>
     </div>
     <div class="skillst">
-        <h6>Soper Supperter-4</h6>
+        <h6>Super Supporter-4</h6>
         <span>TBD</span>
         <div class="progressbar1" data-width="75" data-target="75"></div>
     </div>
@@ -827,7 +827,7 @@
     </div>
  </div>
  </div>
-<!--Starts********************************-->
+<!--position table Starts********************************-->
 
 
 <div class="container">
@@ -871,53 +871,53 @@
                    <td>01</td>
                    <td><div>1</div></td>
                    <td><div>Blue</div></td>
+                   <td><div>3</div></td>
+                   <td><div>1</div></td>
                    <td><div>2</div></td>
-                   <td><div>1</div></td>
-                   <td><div>1</div></td>
                    <td><div>0</div></td>
                    <td><div>2</div></td>
                    <td><div>1</div></td>
                    <td><div>1</div></td>
-                   <td><div>4</div></td>
+                   <td><div>5</div></td>
                </tr>
                <tr>
                    <td>02</td>
                    <td><div>2</div></td>
                    <td><div>Red</div></td>
+                   <td><div>3</div></td>
+                   <td><div>1</div></td>
                    <td><div>2</div></td>
-                   <td><div>1</div></td>
-                   <td><div>1</div></td>
                    <td><div>0</div></td>
                    <td><div>1</div></td>
                    <td><div>0</div></td>
                    <td><div>1</div></td>
-                   <td><div>4</div></td>
+                   <td><div>5</div></td>
                </tr>
                <tr>
                    <td>03</td>
                    <td><div>3</div></td>
                    <td><div>Orange</div></td>
-                   <td><div>2</div></td>
+                   <td><div>3</div></td>
                    <td><div>0</div></td>
-                   <td><div>2</div></td>
+                   <td><div>3</div></td>
                    <td><div>0</div></td>
                    <td><div>1</div></td>
                    <td><div>1</div></td>
                    <td><div>0</div></td>
-                   <td><div>2</div></td>
+                   <td><div>3</div></td>
                </tr>
                <tr>
                    <td>04</td>
                    <td><div>4</div></td>
                    <td><div>Green</div></td>
-                   <td><div>2</div></td>
+                   <td><div>3</div></td>
                    <td><div>0</div></td>
-                   <td><div>0</div></td>
+                   <td><div>1</div></td>
                    <td><div>2</div></td>
                    <td><div>0</div></td>
                    <td><div>2</div></td>
                    <td><div>-2</div></td>
-                   <td><div>0</div></td>                 
+                   <td><div>1</div></td>                 
                </tr>
               
               
