--- a/members.html
+++ b/members.html
@@ -271,14 +271,14 @@
                     </div>
                 </div>
                 <div class="small_container">
-                    <img src="./tiger_bg.png" alt="gg">
+                    <img src="./img/btMembers/Mojnu.jpg" alt="gg">
                     <div class="contents_sm">
                         <h4>Mojnu</h4>
                         <span>Goalkeeper/Deffender</span>
                     </div>
                 </div>
                 <div class="small_container">
-                    <img src="./tiger_bg.png" alt="gg">
+                    <img src="./extra-images/Dr-Ashraf-U.-Choudhury.gif" alt="gg">
                     <div class="contents_sm">
                         <h4>Ashraf </h4>
                         <span>Midfielder/Striker</span>
@@ -292,7 +292,7 @@
                     </div>
                 </div>
                 <div class="small_container">
-                    <img src="./tiger_bg.png" alt="gg">
+                    <img src="./img/btMembers/razzak3.jpeg" alt="gg">
                     <div class="contents_sm">
                         <h4>Razzak </h4>
                         <span>Midfielder/Striker</span>
@@ -337,7 +337,7 @@
                 <div class="small_container">
                     <img src="./tiger_bg.png" alt="gg">
                     <div class="contents_sm">
-                        <h4>Probal</h4>
+                        <h4>Probal Barua</h4>
                         <span>Defender </span>
                     </div>
                 </div>
@@ -387,10 +387,11 @@
                 </div>
 
                 <div class="small_container">
-                    <img src="./tiger_bg.png" alt="gg">
+                    <img src="./img/btMembers/kamal.jpeg" alt="gg">
                     <div class="contents_sm">
                         <h4>Kamal</h4>
-                        <span>Striker/Midfielder</span>
+                        <h6>The best Manager ever</h6>
+                        <span>Manager</span>
                     </div>
                 </div>
 
@@ -555,7 +556,7 @@
                 </div>
 
                 <div class="small_container">
-                    <img src="./tiger_bg.png" alt="gg">
+                    <img src="./img/btMembers/Vu.JPG" alt="gg">
                     <div class="contents_sm">
                         <h4>Vu Nguen</h4>
                         <span>Defender</span>
@@ -625,6 +626,15 @@
                         <h6>Jabed is very experienced.</h6>
                      </div>
                     </div>
+
+                    <div class="small_container">
+                        <img src="./img/btMembers/nowsad.jpeg" alt="gg">
+                        <div class="contents_sm">
+                            <h4>Nowsad</h4>
+                            <span>Striker</span>
+                            <h6>Nowsad is very experienced.</h6>
+                         </div>
+                        </div>
               
 
 
@@ -652,7 +662,7 @@
                     <div class="prof_container">
                         <span class="prof_info">Mojnu<br><span>Goalkeeper/Defender</span></span>
                         <div class="overlay_pl">
-                        <img src="./tiger_bg.png" alt="gg">
+                        <img src="./img/btMembers/Mojnu.jpg" alt="gg">
                         <div class="contents">
                             <!-- <span>Goalkeeper</span> -->
                             <!-- <h4>Mojnu</h4> -->
@@ -667,7 +677,7 @@
                     <div class="prof_container">
                         <span class="prof_info">Ashraf<br><span>Midfielder/Striker</span></span>
                         <div class="overlay_pl">
-                        <img src="./tiger_bg.png" alt="gg">
+                        <img src="./extra-images/Dr-Ashraf-U.-Choudhury.gif" alt="gg">
                         <div class="contents">
                             <!-- <span>Player</span> -->
                             <!-- <h4>Ashraf </h4> -->
@@ -713,7 +723,7 @@
                     <div class="prof_container">
                         <span class="prof_info">Razzak<br><span>Midfielder/Striker</span></span>
                         <div class="overlay_pl">
-                        <img src="./tiger_bg.png" alt="gg">
+                        <img src="./img/btMembers/razzak4.jpeg" alt="gg">
                         <div class="contents">
                             <!-- <span>Player</span> -->
                             <!-- <h4>Razzak</h4> -->
@@ -819,12 +829,28 @@
 
                 <div class="col-lg-3 col-md-4 col-sm-6">
                     <div class="prof_container">
-                        <span class="prof_info">Kamal<br><span>Striker/Midfielder</span></span>
+                        <span class="prof_info">Probal Barua<br><span>Defender</span></span>
                         <div class="overlay_pl">
                         <img src="./tiger_bg.png" alt="gg">
                         <div class="contents">
                             <!-- <span>Player</span> -->
                             <!-- <h4>Sonjoy</h4> -->
+                        </div>
+                        </div>
+                        <div class="prof_footer">
+                            <span>Probal's Profile</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="prof_container">
+                        <span class="prof_info">Kamal<br><span>Manager</span></span>
+                        <div class="overlay_pl">
+                        <img src="./img/btMembers/kamal.jpeg" alt="gg">
+                        <div class="contents">
+                            <!-- <span>Player</span> -->
+                             <h4>The best manager ever</h4> 
                         </div>
                         </div>
                         <div class="prof_footer">
@@ -868,7 +894,7 @@
                     <div class="prof_container">
                         <span class="prof_info">Forhad<br><span>Defender/Midfielder</span></span>
                         <div class="overlay_pl">
-                        <img src="./tiger_bg.png" alt="gg">
+                        <img src="./img/btMembers/Forhad.jpg" alt="gg">
                         <div class="contents">
                             <!-- <span>Player</span> -->
                             <!-- <h4>Sonjoy</h4> -->
@@ -1124,7 +1150,7 @@
                     <div class="prof_container">
                         <span class="prof_info">Vu Nguen<br><span>Defender</span></span>
                         <div class="overlay_pl">
-                        <img src="./tiger_bg.png" alt="gg">
+                        <img src="./img/btMembers/Vu.JPG" alt="gg">
                         <div class="contents">
                         </div>
                         </div>
@@ -1245,6 +1271,22 @@
                         </div>
                     </div> 
                 </div>
+
+                <div class="col-lg-3 col-md-4 col-sm-6">
+                    <div class="prof_container">
+                        <span class="prof_info">Nowsad<br><span>Striker</span></span>
+                        <div class="overlay_pl">
+                        <img src="./img/btMembers/nowsad.jpeg" alt="gg">
+                        <div class="contents">
+                        </div>
+                        </div>
+                        <div class="prof_footer">
+                            <span>Nowsad's Profile</span>
+                        </div>
+                    </div> 
+                </div>
+
+
                   
               </div>
            </div>
